--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1,22 +1,380 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-  <author/>
-  <comment/>
-  <exportmacro/>
-  <class>MainWindow</class>
-  <widget class="QWidget" name="MainWindow">
-    <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>400</width>
-        <height>300</height>
-      </rect>
-    </property>
-    <property name="windowTitle">
-      <string>MainWindow</string>
-    </property>
+ <class>MainWindow</class>
+ <widget class="QWidget" name="MainWindow">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>800</width>
+    <height>600</height>
+   </rect>
+  </property>
+  <property name="font">
+   <font>
+    <pointsize>12</pointsize>
+   </font>
+  </property>
+  <property name="windowTitle">
+   <string>MainWindow</string>
+  </property>
+  <widget class="QLabel" name="polynom">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>40</y>
+     <width>200</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
-  <pixmapfunction/>
-  <connections/>
+  <widget class="QPushButton" name="display">
+   <property name="geometry">
+    <rect>
+     <x>205</x>
+     <y>130</y>
+     <width>111</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Display
+Polynom</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="enterLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>40</y>
+     <width>331</width>
+     <height>80</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="enter">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>130</y>
+     <width>111</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Enter
+Polynom</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="add">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>130</y>
+     <width>111</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add
+Polynom</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="substract">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>130</y>
+     <width>111</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Substract
+Polynom</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>40</y>
+     <width>121</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Polynom:</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>260</y>
+     <width>161</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Derivative at X:</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>350</y>
+     <width>63</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>X:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="xLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>350</y>
+     <width>61</width>
+     <height>80</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="derivative">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>260</y>
+     <width>63</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>260</y>
+     <width>161</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Integral from
+A to C
+with accuracy N:</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>350</y>
+     <width>63</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>A:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="aLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>350</y>
+     <width>61</width>
+     <height>80</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>350</y>
+     <width>63</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>C:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="cLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>350</y>
+     <width>61</width>
+     <height>80</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>350</y>
+     <width>63</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>N:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="nLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>600</x>
+     <y>350</y>
+     <width>61</width>
+     <height>80</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="Integral">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>260</y>
+     <width>91</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>430</y>
+     <width>161</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Roots</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>490</y>
+     <width>63</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>X1:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="x1">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>490</y>
+     <width>63</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_10">
+   <property name="geometry">
+    <rect>
+     <x>430</x>
+     <y>490</y>
+     <width>63</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>X2:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="x2">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>490</y>
+     <width>63</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="derive">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>350</y>
+     <width>111</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Derive
+at X</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="calculateIntegral">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>350</y>
+     <width>111</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Calculate</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="calculateRoots">
+   <property name="geometry">
+    <rect>
+     <x>510</x>
+     <y>470</y>
+     <width>111</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Calculate
+roots</string>
+   </property>
+  </widget>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
